chore(mdx): update post title

--- a/app/blog/posts/containers-and-serverless.mdx
+++ b/app/blog/posts/containers-and-serverless.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Amplifying AWS Lambda with Docker'
+title: 'Running Docker Containers on AWS Lambda'
 publishedAt: '2023-06-22'
-summary: 'Enhance serverless functions with Docker layers for better containerizatio.'
+summary: 'In this post, I will show you how leveraging Lambda for Docker containers can simplify deployment and enhance dependency management.'
 ---
 
 import Image from 'next/image'
