--- a/app/blog/posts/dedicated-game-servers.mdx
+++ b/app/blog/posts/dedicated-game-servers.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Dedicated Game Server Hosting'
 publishedAt: '2024-08-08'
-summary: 'Deploy multiplayer games on Kubernetes using Agones for scalable dedicated server hosting.'
+summary: 'Deploy multiplayer games to the cloud'
 ---
 
 In this post, I’ll demonstrate how to deploy a multiplayer game to the cloud. Feel free to jump to the hands-on section if you want to skip the theory and understand why I'm writing this post. Otherwise, feel free to continue reading from here!
