--- a/app/blog/posts/dedicated-game-servers.mdx
+++ b/app/blog/posts/dedicated-game-servers.mdx
@@ -4,7 +4,7 @@ publishedAt: '2024-08-08'
 summary: 'Deploy multiplayer games to the cloud'
 ---
 
-In this post, I’ll demonstrate how to deploy a multiplayer game to the cloud. Feel free to jump to the hands-on section if you want to skip the theory and understand why I'm writing this post. Otherwise, feel free to continue reading from here!
+In this post, I’ll show you how to deploy a multiplayer game to the cloud. Feel free to jump to the hands-on section if you want to skip the theory and understand why I'm writing this post. Otherwise, feel free to continue reading from here!
 
 ## Understanding Dedicated Game Servers
 
