fix(mdx): upper case subtitle

--- a/app/blog/posts/dedicated-game-server-hosting.mdx
+++ b/app/blog/posts/dedicated-game-server-hosting.mdx
@@ -442,7 +442,7 @@ Now, pick one of the two clients as the leader and click on 'Start Game,' and vo
 
 Not the best game I know, and you probably noticed there is no win condition other than falling off the platform, lol. But the idea is to help you understand the concepts around dedicated game servers rather than focusing on gameplay—I’ll leave that to the gameplay devs. ;)
 
-## Closing comments
+## Closing Comments
 
 You made it all the way to the end, awesome! I know Kubernetes can be a challenging topic, especially for beginners. It might have caused you a headache, or maybe you've become even more curious and want to keep learning! Either way, I want to let you know that you’re not alone. Feel free to reach out with questions—I'm just one ping away from you on LinkedIn or Twitter, and all DMs are welcome! I hope you enjoyed it.
 
