chore(typo): fix typo

--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -8,7 +8,7 @@ It's been almost 1 year since I made this website and exactly 1.5 years after ma
 
 If you know me or have had the chance to work with me, you know that I have a passion for coding and problem solving. This passion quickly turned into a 5+ year career as a programmer.
 
-Those years have flown by so quickly. I’ve worked on a wide variety of projects and industries: AI, IoT, B2B, even apps for Restaurants and more. All this was thanks to JavaScript, which will always hold a special place for me as a programmer. Mastering the JavaScript while improving my knowledge of building applications in the cloud with AWS allowed me to more very quickly in my career.
+Those years have flown by so quickly. I’ve worked on a wide variety of projects and industries: AI, IoT, B2B, even apps for Restaurants and more. All this was thanks to JavaScript, which will always hold a special place for me as a programmer. Mastering JavaScript while improving my knowledge of building applications in the cloud with AWS allowed me to more very quickly in my career.
 
 But it didn’t take long before I reached an inflection point, one that I believe some developers encounter at some point in their careers: that moment when you feel it’s time to work on things you enjoy rather than projects that don’t have meaning for you.
 
