fix(grammar): make little correction

--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -12,7 +12,7 @@ Those years have flown by so quickly. I’ve worked on a wide variety of project
 
 But it didn’t take long before I reached an inflection point, one that I believe some developers encounter at some point in their careers: that moment when you feel it’s time to work on things you enjoy rather than projects that don’t have meaning for you.
 
-In late 2022, and I was transferred to a team developing an internal tool for a client, after an exciting few months rescuing an almost defunct Identity and Access Management platform. In this new project, I felt like I was going nowhere; my motivation wasn’t the same. Then, out of the blue, a new opportunity arrived. One of my old mentors reached out to me. He had joined a US-based company working on computer games and needed to hire a Software Engineer.
+In late 2022, I was transferred to a team developing an internal tool for a client, after an exciting few months rescuing an almost defunct Identity and Access Management platform. In this new project, I felt like I was going nowhere; my motivation wasn’t the same. Then, out of the blue, a new opportunity arrived. One of my old mentors reached out to me. He had joined a US-based company working on computer games and needed to hire a Software Engineer.
 
 Computer games? But I don’t know anything about building games. I almost failed a Video Games course I took back in college because I wasn’t good at it. Seriously, it was too hard for me to grasp all the 3D and simulation stuff involved in games. I was lucky enough to be good at almost everything else programming-wise, and I ended up landing a successful career as a full-stack developer working on both frontend and backend business applications, though I always had a small preference for working on the backend side of things.
 
