--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -16,7 +16,7 @@ In late 2022, I was transferred to a team developing an internal tool for a clie
 
 Computer games? But I don’t know anything about building games. I almost failed a Video Games course I took back in college because I wasn’t good at it. Seriously, it was too hard for me to grasp all the 3D and simulation stuff involved in games. I was lucky enough to be good at almost everything else programming-wise, and I ended up landing a successful career as a full-stack developer working on both frontend and backend business applications, though I always had a small preference for working on the backend side of things.
 
-Immediately after thinking, “This opportunity is not for me,” I received the punchline: it’s a backend role.
+Immediately after thinking, “This opportunity is not for me”, I received the punchline: it’s a backend role.
 
 Backend for games? Is that a thing? It is! And it’s a huge part of multiplayer and live service games.
 
