--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -20,7 +20,7 @@ Immediately after thinking, “This opportunity is not for me”, I received the
 
 Backend for games? Is that a thing? It is! And it’s a huge part of multiplayer and live service games.
 
-Even though I had decided building games was not my thing back in college, that didn’t change the fact that I was a lifelong gamer. Ever since I can remember, I’ve played video games. My earliest memories involve playing Super Nintendo with my brothers as a child or spending time at my dad’s arcade, where kids would spend hours playing video games. Video games have always been in my life. Very early I got a PC, the PlayStation One and Two, as well as many other consoles like the Nintendo 64, Dreamcast, etc. To this day, I've always played video games.
+Even though I had decided building games was not my thing back in college, that didn’t change the fact that I was a lifelong gamer. Ever since I can remember, I’ve played video games. My earliest memories involve playing Super Nintendo with my brothers as a child or spending time at my dad’s arcade, where kids would spend hours playing video games. Video games have always been in my life. Very early I got the PlayStation One and Two, as well as many other consoles like the Nintendo 64, Dreamcast, etc. To this day, I've always played video games.
 
 I’ve played an infinite number of games, but I can tell you the ones I’ve enjoyed the most are the ones I play with friends and family—multiplayer games.
 
