--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -26,7 +26,7 @@ I’ve played an infinite number of games, but I can tell you the ones I’ve en
 
 At that moment, everything clicked. All the games I usually play online: Call of Duty, FIFA, GTA, Fall Guys, Brawlhalla, etc. They all need A backend. Authentication, accounts, parties, player inventory—all these features need a backend system to support them.
 
-I didn’t think much about the offer, even though I noticed it was hard to find references about what backend in gaming was all about. So I took the risk. I quit my job and decided to join the company I work for today: Lunchbox Entertainment, a US game studio working on their first title, a MOBA game called Sirocco.
+I didn’t think much about the offer, even though I noticed it was hard to find references about what backend in gaming was all about. So I took the risk. I quit my job and decided to join the company: Lunchbox Entertainment, a US game studio working on their first title, a MOBA game called Sirocco.
 
 And it’s been a wild ride. Those things were just the tip of the iceberg. There were so many more things: matchmaking, dedicated game servers, engine SDKs, sessions, leaderboards, payments, and more!
 
