--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -4,7 +4,7 @@ publishedAt: '2024-06-18'
 summary: 'My journey into creating backend systems for multiplayer games.'
 ---
 
-It's been almost 1 year since I made this website and exactly 1.5 years after making one of the riskiest but most rewarding moves in my career as a Software Engineer: joining the Game Industry.
+It's been almost one year since I made this website and exactly one and a half years after making one of the riskiest but most rewarding moves in my career as a Software Engineer: joining the Game Industry.
 
 If you know me or have had the chance to work with me, you know that I have a passion for coding and problem solving. This passion quickly turned into a 5+ year career as a programmer.
 
@@ -32,9 +32,9 @@ And it’s been a wild ride. Those things were just the tip of the iceberg. Ther
 
 It’s all built on technologies I already knew, but the problems are different from the ones I used to face while building business software. And they’re more fun because you get to use them in games! All the backend stuff like databases, caching, messaging systems, and your favorite languages like JS, Go, Python—they are all used to build the same backend systems you know but for your favorite games.
 
-It’s been 1.5 years and things are going so fast. I got to attend the GDC (Game Developers Conference) in San Francisco this year and attended so many tech talks where I learned about how the backends of the biggest games are built. After that, I decided that I want to stick to this industry for a good while. I had never achieved the level of work-life harmony that I have since I started working in games.
+After I joined Lunchbox things started to go fast. I got to attend the GDC (Game Developers Conference) in San Francisco and attended so many tech talks where I learned about how the backends of the biggest games are built. After that, I decided that I want to stick to this industry for a good while. I had never achieved the level of work-life harmony that I have since I started working in games.
 
-Today, I continue to build the backend of Sirocco. Keep an eye out because it’s a very special game! :)
+Now, let's continue building the backend of Sirocco. Keep an eye out because it’s a very special game! :)
 
 Besides that, as I mentioned before, there’s not much information out there about what backend in gaming is. People don’t know you can actually pursue a career doing this. That’s something I want to change. I’ve started to speak at [public events](https://www.linkedin.com/feed/update/urn:li:activity:7195120566918356992/) in the Costa Rica dev community about what Game Backend Development is, and I’m going to be creating content as much as possible from now on so people can learn more about it.
 
