--- a/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
+++ b/app/blog/posts/from-building-business-applications-to-the-game-industry.mdx
@@ -32,7 +32,7 @@ And it’s been a wild ride. Those things were just the tip of the iceberg. Ther
 
 It’s all built on technologies I already knew, but the problems are different from the ones I used to face while building business software. And they’re more fun because you get to use them in games! All the backend stuff like databases, caching, messaging systems, and your favorite languages like JS, Go, Python—they are all used to build the same backend systems you know but for your favorite games.
 
-After I joined Lunchbox things started to go fast. I got to attend the GDC (Game Developers Conference) in San Francisco and attended so many tech talks where I learned about how the backends of the biggest games are built. After that, I decided that I want to stick to this industry for a good while. I had never achieved the level of work-life harmony that I have since I started working in games.
+After I joined Lunchbox things started to go fast. I got to attend the GDC (Game Developers Conference) in San Francisco and watch so many tech talks where I learned about how the backends of the biggest games are built. After that, I decided that I want to stick to this industry for a good while. I had never achieved the level of work-life harmony that I have since I started working in games.
 
 Now, let's continue building the backend of Sirocco. Keep an eye out because it’s a very special game! :)
 
