--- a/app/blog/posts/dedicated-game-server-hosting.mdx
+++ b/app/blog/posts/dedicated-game-server-hosting.mdx
@@ -35,7 +35,7 @@ When you Google game server hosting solutions, you'll come across companies that
 
 <b>Build Your Own Orchestrator</b>
 
-Some game studios opt to create their own game server orchestrator using either their own hardware with cloud management software like OpenStack or leveraging base compute services from major cloud providers such as EC2 in AWS or GCE in Google Cloud. This orchestrator acts as middleware responsible for allocating compute resources (CPU and memory) to scale either vertically or horizontally to manage their game server fleet.
+Some game studios opt to create their own game server orchestrator using either their own hardware with cloud management software like OpenStack or leveraging base compute services from major cloud providers such as EC2 in AWS or GCE in Google Cloud. This orchestrator acts as middleware responsible for allocating compute resources (CPU and memory) to scale either vertically or horizontally to manage the game server fleet.
 
 This approach is commonly seen with AAA games, a term informally used to classify video games with higher development and marketing budgets compared to other tiers of games.
 
