--- a/app/blog/posts/dedicated-game-server-hosting.mdx
+++ b/app/blog/posts/dedicated-game-server-hosting.mdx
@@ -51,7 +51,7 @@ Names like Multiplay, i3D.net, Edge Gap, Hathora, and Amazon GameLift are notabl
 
 We all appreciate Open Source for its accessibility (no entry fees to get started) and the opportunity to contribute to projects we find interesting or enjoy, often supported by vibrant communities.
 
-In the game development realm, one standout open source tool is particularly noteworthy: Agones. It's not only popular among the community but also battle-tested. Agones is described as "an open source, batteries-included, multiplayer dedicated game server scaling and orchestration platform that runs on Kubernetes." In this post, I'll demonstrate how you can harness Agones to host your multiplayer game.
+In the game development realm, one standout open source tool is particularly noteworthy: Agones. It's not only popular among the community but also battle-tested. Agones is described as "a dedicated game server scaling and orchestration platform that runs on Kubernetes." In this post, I'll demonstrate how you can harness Agones to host your multiplayer game.
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
   <Image
