--- a/app/blog/posts/dedicated-game-server-hosting.mdx
+++ b/app/blog/posts/dedicated-game-server-hosting.mdx
@@ -190,7 +190,7 @@ So, let’s set up a cluster in Digital Ocean. Feel free to sign up; they provid
 </div>
 <br/>
 
-2. Once your cluster is fully provisioned, it will take between 2 to 4 minutes. Once it's ready, you'll see it running and available for use.
+2. Once your cluster is fully provisioned, it will take between 2 to 4 minutes to start. Once it's ready, you'll see it running and available for use.
 
 <br/>
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
